--- a/src/app/pages/not-found/not-found.component.scss
+++ b/src/app/pages/not-found/not-found.component.scss
@@ -1,35 +1,33 @@
+@import '../../../styles/abstracts';
+
 .not-found-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
+  @include flexCenter(column);
   height: 100vh;
-  padding: 1rem;
+  padding: 10px;
   .error-code {
-    border-radius: 5px;
     padding: 10px;
-    background-color: #ff000015;
-    color: #ff0000b5;
-    box-shadow: 0px 0px 0px 1px #ff0000b5;
+    border-radius: $border-radius-sm;
+    color: $color-text-danger;
+    background-color: $color-bg-danger;
+    box-shadow: $box-shadow-spread-danger;
   }
   .content {
     display: flex;
     flex-direction: column;
-    gap: 1rem;
-    margin-bottom: 20rem;
+    gap: $flex-gap-sm;
+    padding-bottom: 200px;
+    text-align: center;
     a {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      gap: 1rem;
-      border-radius: 10px;
-      text-decoration: none;
+      @include flexCenter(row);
+      gap: $flex-gap-sm;
       padding: 10px;
-      background-color: #22252677;
-      color: whitesmoke;
+      border-radius: $border-radius-sm;
+      text-decoration: none;
+      color: $color-text-white;
+      box-shadow: $box-shadow-spread;
       &:hover {
-        transition: ease 0.2s;
-        background-color: #222526;
+        transition: $transition-fast;
+        background-color: $color-btn-bg-hover-grey;
       }
     }
   }
