--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,5 @@
 @import '../node_modules/primeicons/primeicons.css';
+@import './styles/abstracts';
 
 ::-webkit-scrollbar {
   width: 2px;
@@ -12,6 +13,6 @@ body {
   font-family: 'Poppins', sans-serif;
   overflow: hidden;
   margin: auto;
-  background-color: #161718;
-  color: whitesmoke;
+  background-color: $color-bg-page;
+  color: $color-text-white;
 }
