Created new editBoard method in board.service.ts to handle board editing. Moved BoardsArray inside board.service.ts and is now being stored with localStorage. Some adjustments for components dependent on board.service.ts to work with the new changes mentioned above.

--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -12,7 +12,7 @@
   </header>
   <div class="sidebar-content">
     <ul>
-      @for (board of boardService.boards; track board.id) {
+      @for (board of boardService.BoardsArray; track board.id) {
       <li class="sidebar-item">
         <app-board-btn [boardBtn]="board" />
       </li>
