--- a/src/app/pages/board/board.component.scss
+++ b/src/app/pages/board/board.component.scss
@@ -1,4 +1,9 @@
-h3 {
-  padding: 0.5rem;
+@import '../../../styles/abstracts';
+
+.board {
+  margin-right: 40px;
+}
+
+h2 {
   text-align: center;
 }
