--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,7 +12,7 @@
 body {
   font-family: 'Poppins', sans-serif;
   overflow: hidden;
-  margin: auto;
+  margin: 0;
   background-color: $color-bg-page;
   color: $color-text-white;
 }
