--- a/src/app/pages/board/board.component.html
+++ b/src/app/pages/board/board.component.html
@@ -1,4 +1,4 @@
 <h2>{{ boardTitle }}</h2>
 <div class="board">
-    <app-tasks></app-tasks>
+    <app-tasks [BoardId]="boardId"></app-tasks>
 </div>
