--- a/src/app/pages/not-found/not-found.component.html
+++ b/src/app/pages/not-found/not-found.component.html
@@ -2,6 +2,6 @@
     <h1 class="error-code">404</h1>
     <div class="content">
         <h2>The page you are looking for doesn't exist.</h2>
-        <a routerLink="/"><i class="pi pi-chevron-left"></i> Return home</a>
+        <a routerLink="/"><i class="pi pi-arrow-left"></i> Return home</a>
     </div>
 </div>
